--- a/style/style.css
+++ b/style/style.css
@@ -28,14 +28,23 @@
   position: absolute;
   height: 400px;
   width: 4000px;
-  background-image: url(https://media.freestocktextures.com/cache/e9/52/e952eced5348711e8a305c740399abef.jpg);
-  transform: rotateY(30deg); }
+  background: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.8)), url(https://media.freestocktextures.com/cache/e9/52/e952eced5348711e8a305c740399abef.jpg);
+  transform: rotateY(90deg); }
 
 .floor {
   width: 1000px;
   height: 1000px;
+  top: -100px;
   position: absolute;
-  background-image: url(https://media.freestocktextures.com/cache/e9/52/e952eced5348711e8a305c740399abef.jpg);
-  transform: rotateX(90deg); }
+  background-image: url(https://i.pinimg.com/originals/85/c0/50/85c050d708a7052f4ff3f4bbbfcf56a0.jpg);
+  transform: rotateX(90deg) scale3d(2, 2, 1); }
+
+.testWeapon {
+  position: fixed;
+  bottom: 0;
+  right: 200px;
+  height: 256px;
+  width: 640px;
+  z-index: 5; }
 
 /*# sourceMappingURL=style.css.map */
