--- a/style/style.css
+++ b/style/style.css
@@ -36,6 +36,7 @@
   height: 1000px;
   top: -100px;
   position: absolute;
+  background-color: green;
   background-image: url(https://i.pinimg.com/originals/85/c0/50/85c050d708a7052f4ff3f4bbbfcf56a0.jpg);
   transform: rotateX(90deg) scale3d(2, 2, 1); }
 
