--- a/style/style.css
+++ b/style/style.css
@@ -28,21 +28,27 @@ h2 {
   left: 50%;
   top: 0%; }
 
-.object {
+.object, .glass {
   position: absolute;
   height: 400px;
   width: 4000px;
   background: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.8)), url(https://media.freestocktextures.com/cache/e9/52/e952eced5348711e8a305c740399abef.jpg);
   transform: rotateY(90deg); }
 
+.glass {
+  height: 400px;
+  width: 1200px;
+  transform: rotateY(180deg);
+  background: url(http://pluspng.com/img-png/transparent-glass-png-glass-png-1500.png);
+  background-size: cover; }
+
 .floor {
-  width: 1000px;
-  height: 1000px;
-  top: -100px;
+  width: 10000px;
+  height: 10000px;
+  top: 500px;
   position: absolute;
-  background-color: green;
-  background-image: url(https://i.pinimg.com/originals/85/c0/50/85c050d708a7052f4ff3f4bbbfcf56a0.jpg);
-  transform: rotateX(90deg) scale3d(2, 2, 1); }
+  background-color: blue;
+  transform: rotateX(90deg) scale3d(100, 100, 1); }
 
 .testWeapon {
   position: fixed;
