--- a/style/style.css
+++ b/style/style.css
@@ -20,8 +20,8 @@ h2 {
   -moz-perspective: 700px;
   -ms-perspective: 700px;
   perspective: 800px;
-  background: url(http://1-background.com/images/clouds/sea-of-clouds-seamless-repeating-tile.jpg);
-  background-size: 50%; }
+  background: url(http://junior3d.ru/texture/%D0%9D%D0%B5%D0%B1%D0%BE/%D0%A4%D1%80%D0%B0%D0%B3%D0%BC%D0%B5%D0%BD%D1%82%D1%8B%D0%9D%D0%B5%D0%B1%D0%B0/%D1%84%D1%80%D0%B0%D0%B3%D0%BC%D0%B5%D0%BD%D1%82%D1%8B-%D0%BD%D0%B5%D0%B1%D0%B0_137.jpg) 0 -15px;
+  background-size: 60%; }
 
 .level {
   position: absolute;
@@ -47,7 +47,7 @@ h2 {
   height: 10000px;
   top: 500px;
   position: absolute;
-  background-color: blue;
+  background-color: green;
   transform: rotateX(90deg) scale3d(100, 100, 1); }
 
 .testWeapon {
