--- a/style/style.css
+++ b/style/style.css
@@ -20,8 +20,8 @@ h2 {
   -moz-perspective: 700px;
   -ms-perspective: 700px;
   perspective: 800px;
-  background: url(http://1-background.com/images/clouds/sea-of-clouds-seamless-repeating-tile.jpg);
-  background-size: 50%; }
+  background: url(http://www.textures.com/system/gallery/photos/Landscapes/Skies%20Partial/16294/Skies0239_600.jpg) 0 -15px;
+  background-size: 60%; }
 
 .level {
   position: absolute;
