--- a/style/style.scss
+++ b/style/style.scss
@@ -25,9 +25,9 @@ h2{
     -ms-perspective: 700px;
     perspective: 800px;
     
-    background: url(http://1-background.com/images/clouds/sea-of-clouds-seamless-repeating-tile.jpg);
+    background: url(http://www.textures.com/system/gallery/photos/Landscapes/Skies%20Partial/16294/Skies0239_600.jpg) 0 -15px;
    // background-position: -500px -500px;
-    background-size: 50%;
+    background-size: 60%;
     
 
 }
