--- a/style/style.scss
+++ b/style/style.scss
@@ -1,39 +1,45 @@
 @import "_plane.scss";
 
-html,body{
-	cursor: none;
+body{
+	overflow: hidden;
+	background: url(img/background.jpg);
+	background-size: cover;
 }
 
 *{
 	margin: 0;
 	padding: 0;
-	 webkit-transform-style: preserve-3d;
+	webkit-transform-style: preserve-3d;
     -moz-transform-style: preserve-3d;
     -ms-transform-style: preserve-3d;
     transform-style: preserve-3d;
-
 }
 h2{
 	opacity: 0.5;
 }
 
+$cameraW: 1300px;
+$cameraH: 700px;
+$size: 1;
 #camera{
+	width: $cameraW*$size;
+    height: $cameraH*$size;
+    cursor: none;
+	margin:  auto;
 	position: relative;
-    float: left;
     overflow: hidden;
-    width: 100%;
-    height: 100vh;
-    background: #222;
+  	background: url(img/skybox.jpg) 0 -5px;
+    background-size: 60%;
+    
     -webkit-perspective: 700px;
     -moz-perspective: 700px;
     -ms-perspective: 700px;
     perspective: 800px;
     
-    background: url(http://www.textures.com/system/gallery/photos/Landscapes/Skies%20Partial/16294/Skies0239_600.jpg) 0 -15px;
-   // background-position: -500px -500px;
-    background-size: 60%;
     
-
+    @media(min-device-width: 1400px){
+   	 	margin: 200px auto;
+   	}
 }
 
 
@@ -48,7 +54,7 @@ h2{
 	//top: 300px;
 	height: 400px;
 	width: 4000px;
-	background: linear-gradient(rgba(0,0,0,.2), rgba(0,0,0,.8)), url(https://media.freestocktextures.com/cache/e9/52/e952eced5348711e8a305c740399abef.jpg);
+	background: linear-gradient(rgba(0,0,0,.2), rgba(0,0,0,.8)), url(img/wall.jpg);
 	transform: rotateY(90deg) ;
 	
 }
@@ -57,7 +63,7 @@ h2{
 	height: 400px;
 	width: 1200px;
 	transform: rotateY(180deg); 
-	background: url(http://pluspng.com/img-png/transparent-glass-png-glass-png-1500.png);
+	background: url(img/glass.png);
 	background-size: cover;
 }
 
