--- a/style/style.css
+++ b/style/style.css
@@ -1735,7 +1735,7 @@ h2 {
   height: 400px;
   width: 4000px;
   background: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.8)), url(img/wall.jpg);
-  transform: rotateY(90deg); }
+  transform: rotateY(90deg) translate3d(0, 100px, 0); }
 
 .glass {
   height: 400px;
@@ -1745,8 +1745,8 @@ h2 {
   background-size: cover; }
 
 .floor {
-  width: 10000px;
-  height: 10000px;
+  width: 1000px;
+  height: 1000px;
   top: 500px;
   position: absolute;
   background-color: green;
