--- a/style/style.scss
+++ b/style/style.scss
@@ -49,7 +49,11 @@ $size: 1;
 	width: 250px;
 	position: absolute;
 	&.shotgun {
-		background: url(img/weapons/shotgun.png);
+		background: url(img/items/shotgun.png);
+		background-size: cover;
+	}
+	&.medkit {
+		background: url(img/items/medkit.png);
 		background-size: cover;
 	}
 }
