[ADD] dead state

--- a/style/index.scss
+++ b/style/index.scss
@@ -28,10 +28,21 @@
         animation: walk 1.1s steps(1) infinite;
         @keyframes walk {
           0% { background-position: -330px; }
-          33.33% { background-position: -635px; }
-          66.66% { background-position: -940px; }
-          100% { background-position: -1245px; }
-       }
+          25% { background-position: -635px; }
+          50% { background-position: -940px; }
+          75% { background-position: -1245px; }
+        }
+      }
+      &.dead {
+        background-position: -3132px;
+        animation: dead 1s steps(1);
+        @keyframes dead {
+          0% { background-position: -1558px; }
+          20% { background-position: -1880px; }
+          40% { background-position: -2210px; }
+          60% { background-position: -2522px; }
+          80% { background-position: -3132px; }
+        }
       }
     }
   }
