[UPD] Enemy class

--- a/style/_level.scss
+++ b/style/_level.scss
@@ -16,8 +16,8 @@ h2{
 	opacity: 0.5;
 }
 
-$cameraW: 90vw;
-$cameraH: 90vh;
+$cameraW: 1300px;
+$cameraH: 700px;
 $size: 1;
 #camera{
 	width: $cameraW*$size;
