--- a/style/index.scss
+++ b/style/index.scss
@@ -1,18 +1,18 @@
 @import "level";
 
 .sprite {
-	position: absolute;
-	&.item {
+  position: absolute;
+  &.item {
     height: 150px;
     width: 250px;
-		&.shotgun {
-			background: url(img/items/shotgun.png);
-			background-size: cover;
-		}
-		&.medkit {
-			background: url(img/items/medkit.png);
-			background-size: cover;
-		}
+    &.shotgun {
+      background: url(img/items/shotgun.png);
+      background-size: cover;
+    }
+    &.medkit {
+      background: url(img/items/medkit.png);
+      background-size: cover;
+    }
   }
   &.enemy {
     &.guard {
@@ -27,44 +27,62 @@
       &.walk {
         animation: walk 1.1s steps(1) infinite;
         @keyframes walk {
-          0% { background-position: -330px; }
-          25% { background-position: -635px; }
-          50% { background-position: -940px; }
-          75% { background-position: -1245px; }
+          0% {
+            background-position: -330px;
+          }
+          25% {
+            background-position: -635px;
+          }
+          50% {
+            background-position: -940px;
+          }
+          75% {
+            background-position: -1245px;
+          }
         }
       }
       &.dead {
         background-position: -3132px;
         animation: dead 1s steps(1);
         @keyframes dead {
-          0% { background-position: -1558px; }
-          20% { background-position: -1880px; }
-          40% { background-position: -2210px; }
-          60% { background-position: -2522px; }
-          80% { background-position: -3132px; }
+          0% {
+            background-position: -1558px;
+          }
+          20% {
+            background-position: -1880px;
+          }
+          40% {
+            background-position: -2210px;
+          }
+          60% {
+            background-position: -2522px;
+          }
+          80% {
+            background-position: -3132px;
+          }
         }
       }
       &.atack {
         animation: atack 1.1s steps(1) infinite;
         @keyframes atack {
-          0% { background-position: -3412px; }
-          50% { background-position: -3720px; }
+          0% {
+            background-position: -3412px;
+          }
+          50% {
+            background-position: -3720px;
+          }
         }
       }
     }
   }
 }
 
-
-.testWeapon{
-	position: fixed;
-	bottom: 0;
-	right: 200px;
-	height: 2*128px;
-	width: 2*320px;
-	z-index: 5;
-	
+.testWeapon {
+  position: fixed;
+  bottom: 0;
+  right: 200px;
+  height: 2 * 128px;
+  width: 2 * 320px;
+  z-index: 5;
 }
 ///////
-
-	
