--- a/style/_level.scss
+++ b/style/_level.scss
@@ -20,8 +20,8 @@ $size: 1;
   width: $cameraW * $size;
   height: $cameraH * $size;
   cursor: none;
-  margin: auto;
-  margin-top: 8vh;
+  // margin: auto;
+  // margin-top: 8vh;
   position: relative;
   overflow: hidden;
   background: url(img/skybox.jpg) 0 -5px;
