moved resource as static

--- a/src/classes/Model/House/_style.scss
+++ b/src/classes/Model/House/_style.scss
@@ -694,7 +694,7 @@
     background-color: #009051;
   }
   .roof_L .tp {
-    background: url(http://www.tomasrdesign.com/thforrester/textures/sidingTexture.jpg);
+    background: url(img/models/house/sidingTexture.jpg);
   }
   .roof_L .bm {
     background-color: #565656;
@@ -734,7 +734,7 @@
     background-color: #009051;
   }
   .roof_L-1 .tp {
-    background: url(http://www.tomasrdesign.com/thforrester/textures/sidingTexture.jpg);
+    background: url(img/models/house/sidingTexture.jpg);
   }
   .roof_L-1 .bm {
     background-color: #565656;
@@ -1023,10 +1023,10 @@
     background-color: #ffffff;
   }
   .back .ft {
-    background: url(http://www.tomasrdesign.com/thforrester/textures/Front.png);
+    background: url(img/models/house/Front.png);
   }
   .back .bk {
-    background: url(http://www.tomasrdesign.com/thforrester/textures/Front.png);
+    background: url(img/models/house/Front.png);
   }
   /* .front styles */
   .front {
@@ -1057,10 +1057,10 @@
     background-color: #ffffff;
   }
   .front .ft {
-    background: url(http://www.tomasrdesign.com/thforrester/textures/Front.png);
+    background: url(img/models/house/Front.png);
   }
   .front .bk {
-    background: url(http://www.tomasrdesign.com/thforrester/textures/Front.png);
+    background: url(img/models/house/Front.png);
   }
   /* .roofCurve_R_1 styles */
   .roofCurve_R_1 {
@@ -1097,7 +1097,7 @@
     background-color: #009051;
   }
   .roofCurve_R_1 .tp {
-    background: url(http://www.tomasrdesign.com/thforrester/textures/sidingTexture.jpg);
+    background: url(img/models/house/sidingTexture.jpg);
   }
   .roofCurve_R_1 .bm {
     background-color: #565656;
@@ -1137,7 +1137,7 @@
     background-color: #009051;
   }
   .roofCurve_R-2 .tp {
-    background: url(http://www.tomasrdesign.com/thforrester/textures/sidingTexture.jpg);
+    background: url(img/models/house/sidingTexture.jpg);
   }
   .roofCurve_R-2 .bm {
     background-color: #565656;
@@ -1171,8 +1171,7 @@
     height: 20.21em;
   }
   .right .face {
-    background: url(http://www.tomasrdesign.com/thforrester/textures/Side.png)
-      #ffffff;
+    background: url(img/models/house/Side.png) #ffffff;
   }
   /* .left styles */
   .left {
@@ -1200,8 +1199,7 @@
     height: 20.21em;
   }
   .left .face {
-    background: url(http://www.tomasrdesign.com/thforrester/textures/Side.png)
-      #ffffff;
+    background: url(img/models/house/Side.png) #ffffff;
   }
   /* .roofCurve_L_1 styles */
   .roofCurve_L_1 {
@@ -1238,7 +1236,7 @@
     background-color: #009051;
   }
   .roofCurve_L_1 .tp {
-    background: url(http://www.tomasrdesign.com/thforrester/textures/sidingTexture.jpg);
+    background: url(img/models/house/sidingTexture.jpg);
   }
   .roofCurve_L_1 .bm {
     background-color: #565656;
@@ -1278,7 +1276,7 @@
     background-color: #009051;
   }
   .roofCurve_L-2 .tp {
-    background: url(http://www.tomasrdesign.com/thforrester/textures/sidingTexture.jpg);
+    background: url(img/models/house/sidingTexture.jpg);
   }
   .roofCurve_L-2 .bm {
     background-color: #565656;
