--- a/style/_level.scss
+++ b/style/_level.scss
@@ -70,7 +70,7 @@ $size: 1;
 
   background-size: 10px;
   background-repeat: repeat;
-  background-image: url(https://www.textures.com/system/gallery/photos/Nature/Grass/50182/Grass0130_1_270.jpg);
+  background-image: url(img/grass.jpg);
 
   transform-style: preserve-3d;
 }
