--- a/src/ui/components/HealthBar/style.scss
+++ b/src/ui/components/HealthBar/style.scss
@@ -1,7 +1,8 @@
 .health-bar {
   position: absolute;
+  display: flex;
 
-  $margin: 20px;
+  $margin: 40px;
   bottom: $margin;
   left: $margin;
 }
