--- a/src/classes/Wall/style.scss
+++ b/src/classes/Wall/style.scss
@@ -1,8 +1,7 @@
 .wall {
   position: absolute;
   height: 400px;
-  background: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.8)),
-    url(https://i.imgur.com/w7Q8WWL.png);
+  background: black;
   background-size: 4% 100%;
 
   transform-style: preserve-3d;
