--- a/src/classes/Wall/style.scss
+++ b/src/classes/Wall/style.scss
@@ -1,99 +1,27 @@
 .wall {
   transform-style: preserve-3d;
-
-  .shape {
-    position: absolute;
-    transform-style: preserve-3d;
-    top: 50%;
-    left: 50%;
-    width: 0;
-    height: 0;
-    transform-origin: 50%;
-
-    .bk,
-    .ft {
-      width: 100%;
-      height: 100%;
-    }
-
-    .rt {
-      transform: rotateY(-90deg) translateX(-50%);
-    }
-
-    .lt {
-      transform: rotateY(90deg) translateX(-50%);
-      left: 100%;
-    }
-  }
+  // width: 100px;
+  // height: 100px;
 
   .face {
     position: absolute;
-    transform-style: preserve-3d;
+    width: 100px;
+    height: 100px;
 
-    overflow: hidden;
-    transform-origin: 0 0;
-    // backface-visibility: hidden;
-    background-size: 100% 100% !important;
-    background-position: center;
-  }
-
-  .back {
-    transform: translate3D(6em, -4.25em, -0.1em) rotateX(0) rotateY(0)
-      rotateZ(0);
-    opacity: 1;
-    width: 12.4em;
-    height: 8.5em;
-    margin: -4.25em 0 0 -6.2em;
-
-    background: url(img/models/house/Front.png);
-    background-size: 100% 100% !important;
-    background-position: center;
+    background: url(img/floor.png);
+    background-size: 25px 44px;
   }
 
   .front {
-    transform: translate3D(6em, -4.25em, 20.1em) rotateX(0) rotateY(0)
-      rotateZ(0);
-    opacity: 1;
-    width: 12.4em;
-    height: 8.5em;
-    margin: -4.25em 0 0 -6.2em;
-
-    background: url(img/models/house/Front.png);
-    background-size: 100% 100% !important;
-    background-position: center;
+    transform: rotateY(0deg) translateZ(50px);
   }
-
   .right {
-    transform: translate3D(12.2em, -3em, 10em) rotateX(0) rotateY(0) rotateZ(0);
-    opacity: 1;
-    width: 0;
-    height: 6em;
-    margin: -3em 0 0 0;
-
-    .lt {
-      width: 20.21em;
-      height: 6em;
-    }
-
-    .face {
-      background: url(img/models/house/Side.png) #fff;
-    }
+    transform: rotateY(90deg) translateZ(50px);
   }
-
+  .back {
+    transform: rotateY(180deg) translateZ(50px);
+  }
   .left {
-    transform: translate3D(-0.2em, -3em, 10em) rotateX(0) rotateY(0) rotateZ(0);
-    opacity: 1;
-    width: 0;
-    height: 6em;
-    margin: -3em 0 0 0;
-
-    .rt {
-      width: 20.21em;
-      height: 6em;
-    }
-
-    .face {
-      background: url(img/models/house/Side.png) #fff;
-    }
+    transform: rotateY(-90deg) translateZ(50px);
   }
 }
