Added doom font

--- a/src/ui/screens/Menu/style.scss
+++ b/src/ui/screens/Menu/style.scss
@@ -1,4 +1,13 @@
 .menu {
   background-image: url(img/menu/background.png);
   background-size: cover;
+
+  .navigation {
+    width: 100%;
+    height: 100%;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
 }
