--- a/src/ui/screens/Loading/style.scss
+++ b/src/ui/screens/Loading/style.scss
@@ -8,67 +8,22 @@
   align-items: center;
   flex-direction: column;
 
-  .loading-title {
-    color: white;
-    text-align: center;
+  color: white;
+  font-family: "Gill Sans", sans-serif;
 
-    font-size: 70px;
-
-    margin-bottom: 20px;
-    font-weight: bold;
-  }
-
-  .line-container {
-    position: relative;
-    width: 60%;
-    height: 60px;
-    overflow: hidden;
-    border-radius: 50px;
-
-    background: brown;
-
+  .wrapper {
+    width: 100%;
+    height: 100%;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    flex-direction: column-reverse;
 
-    margin-bottom: 30px;
+    overflow: hidden;
 
-    .line {
-      height: 100%;
-      width: 60%;
-
-      background: yellow;
-      position: absolute;
-      top: 0;
-      left: 0;
+    div {
+      margin-left: 10px;
+      margin-bottom: 2px;
     }
 
-    .percent {
-      font-size: 40px;
-      font-weight: bold;
-
-      z-index: 10;
-    }
-  }
-
-  .text {
-    font-size: 40px;
-
-    color: white;
-  }
-
-  .start-button {
-    font-size: 40px;
-    border-radius: 50px;
-
-    width: 200px;
-    background-color: white;
-
-    text-align: center;
-
-    &.active {
-      background-color: green;
-      color: white;
-    }
+    padding-bottom: 5px;
   }
 }
