--- a/style/index.scss
+++ b/style/index.scss
@@ -1,5 +1,4 @@
 @import "level";
-@import "fonts";
 
 $cameraW: 1300px;
 $cameraH: 700px;
@@ -26,6 +25,8 @@ $size: 1;
   overflow: hidden;
 
   perspective: 800px;
+
+  display: none;
 }
 
 #ui,
