--- a/src/ui/screens/Game/Weapon/style.scss
+++ b/src/ui/screens/Game/Weapon/style.scss
@@ -1,10 +1,17 @@
 .weapon-container {
   position: absolute;
-  bottom: 0;
-  right: 200px;
-  height: 2 * 128px;
-  width: 2 * 320px;
+  width: 100%;
+  height: 100%;
+  // background: rgba(white, 0.1);
 
-  background-size: cover;
-  background-image: url(img/weapon.png);
+  .shotgun {
+    position: absolute;
+    bottom: 0;
+    right: 200px;
+    height: 2 * 128px;
+    width: 2 * 320px;
+
+    background-size: cover;
+    background-image: url(img/weapon.png);
+  }
 }
