--- a/src/ui/screens/Game/Weapon/weapon_styles/_shotgun.scss
+++ b/src/ui/screens/Game/Weapon/weapon_styles/_shotgun.scss
@@ -44,7 +44,7 @@
         background-position-x: -977px;
       }
 
-      animation: shot 1s steps(1);
+      animation: shot steps(1);
       @keyframes shot {
         0% {
           @include shot-1;
