added changing weapon animation

--- a/src/ui/screens/Game/Weapon/style.scss
+++ b/src/ui/screens/Game/Weapon/style.scss
@@ -9,6 +9,28 @@
     background-position-y: center;
     background-size: initial;
   }
+
+  .changing-weapon {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+
+    &.active {
+      animation: change-weapon;
+
+      @keyframes change-weapon {
+        0% {
+          top: 0;
+        }
+        50% {
+          top: 300px;
+        }
+        100% {
+          top: 0;
+        }
+      }
+    }
+  }
 }
 
 @import "weapon_styles/index";
