--- a/src/items/PistolItem/style.scss
+++ b/src/items/PistolItem/style.scss
@@ -1,6 +1,6 @@
 .sprite.item {
-  &.shotgun {
-    background: url(img/items/shotgun.png);
+  &.pistol {
+    background: url(img/items/pistol.png);
     background-size: 240px;
     background-position-y: 50px;
   }
