--- a/src/ui/screens/Game/style.scss
+++ b/src/ui/screens/Game/style.scss
@@ -1,9 +1,13 @@
-.overlay-filter {
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
+.game-ui-wrapper {
+  cursor: none;
 
-  background-color: rgba(lightsalmon, 0.12);
+  .overlay-filter {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+
+    background-color: rgba(lightsalmon, 0.12);
+  }
 }
